--- a/src/app/features/reports/ctc-report/ctc-report.component.html
+++ b/src/app/features/reports/ctc-report/ctc-report.component.html
@@ -1,15 +1,15 @@
-<div class="page-start-point mt-5 pt-4 ctc-report">
+<div class="page-start-point mt-5 pt-2 ctc-report">
   <form *ngIf="allProjectsList" [formGroup]="form">
     <div class="row" class="users-dashboard p-b-20 min-height parent report">
       <!-- In case of WEB View - design for search Projects, Generate Report and amount  -->
       <div class="row align-items-center mt-2 ctc-upper-section">
 
-        <div class="col-md-12 mb-2">
+        <div class="col-md-12 mb-0 pl-2">
           <h4 class="report-header">Cost To Complete Report</h4>
         </div>
 
         <!------ Select Project Field ------>
-        <div class="col-md-3 col-xs-6 text-left showResponsiveReport">
+        <div class="col-md-3 col-sm-5 col-xs-6 text-left showResponsiveReport">
           <mat-form-field class="border-select select-project-dropdown w-100">
             <mat-label>Select Project</mat-label>
             <mat-select formControlName="selectedProject" multiple>
@@ -37,7 +37,7 @@
           </mat-form-field>
         </div>
 
-        <div class="col-md-2 pt-2">
+        <div class="col-md-2 col-sm-6 col-xs-5 pt-2">
           <!------ Show Amount Field ------>
           <div *ngIf="allProjectsData"
             class="show-amount-dropdown text-semi-bold main-color font-size-vary-grn cursor-pointer" #triggerBtn
@@ -46,9 +46,9 @@
           </div>
         </div>
 
-        <div class="col-md-7 col-xs-6 add-project-btn display-flex justify-content-flex-end align-items-center pt-2">
+        <div class="col-md-7 col-sm-1 col-xs-1 add-project-btn display-flex justify-content-flex-end align-items-center pt-2">
           <!------ Download Report ------>
-          <div class="download-report pr-3" *ngIf="allProjectsData">
+          <div class="download-report" *ngIf="allProjectsData">
             <a class="font-size16 cursor-pointer" matTooltip="Download Report" (click)="downloadExcel()"> <img
                 src="../../../../assets/images/download-po.png" /></a>
           </div>
