--- a/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
+++ b/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
@@ -1,14 +1,14 @@
-<div class="page-start-point mt-5 pt-4">
+<div class="page-start-point mt-5 pt-2 liability-outer-secton">
   <form *ngIf="allProjects" [formGroup]="form" autocomplete="off">
     <div class="row" class="users-dashboard p-b-20 min-height parent report">
       <!-- In case of WEB View - design for search Projects, Supplier, Generate Report and amount  -->
       <div class="row align-items-center">
 
-        <div class="col-md-12 mb-2">
+        <div class="col-md-12 mb-0 pl-0">
           <h4 class="report-header">Liability Report</h4>
         </div>
 
-        <div class="col-md-3 col-sm-4 col-xs-4 text-left showResponsiveReport">
+        <div class="col-md-3 col-sm-4 col-xs-6 text-left showResponsiveReport pl-0">
           <mat-form-field class="border-select select-project width100Percent font-size-vary-grn">
             <mat-label>Select Project</mat-label>
             <mat-select formControlName="selectedProject" multiple>
@@ -35,7 +35,7 @@
           </mat-form-field>
         </div>
 
-        <div class="col-md-3 col-sm-4 col-xs-4 text-left showResponsiveReport">
+        <div class="col-md-3 col-sm-4 col-xs-6 text-left showResponsiveReport">
           <mat-form-field class="border-select select-project width100Percent font-size-vary-grn">
             <mat-label>Select Supplier</mat-label>
             <mat-select formControlName="selectedSupplier" multiple>
@@ -62,7 +62,9 @@
           </mat-form-field>
         </div>
 
-        <div class="col-md-2 pt-4">
+        <div class="col-xs-7 d-md-none"></div>
+
+        <div class="col-md-2 col-sm-3 col-xs-4 pt-4 mobile-display-amount">
           <div *ngIf="supplierLiabiltyReportData"
             class="show-amount pt-0 text-semi-bold main-color font-size-vary-grn cursor-pointer" #triggerBtn
             [matMenuTriggerFor]="amount">
@@ -70,9 +72,9 @@
           </div>
         </div>
 
-        <div class="col-md-4 col-sm-4 col-xs-4 add-project-btn display-flex align-items-center pt-4"
+        <div class="col-md-4 col-sm-1 col-xs-1 add-project-btn display-flex align-items-center pt-4"
           [ngClass]="isMobile ? 'justify-content-flex-start height-25-px' : 'justify-content-flex-end'">
-          <div *ngIf="projectIds.length || supplierIds.length" class="p-r-20">
+          <div *ngIf="projectIds.length || supplierIds.length">
             <a class="font-size16 cursor-pointer" matTooltip="Download Report"> <img
                 src="../../../../assets/images/download-po.png" (click)="downloadExcel()" /> </a>
           </div>
@@ -81,6 +83,7 @@
             Generate Report
           </button> -->
         </div>
+
         <div *ngIf="supplierLiabiltyReportData"
           class="col-xs-3 col-sm-12 add-project-btn display-flex justify-content-flex-end showResponsiveReport column-4">
         </div>
