--- a/src/assets/scss/pages/report.scss
+++ b/src/assets/scss/pages/report.scss
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 959px){
   .liability-outer-secton, .liability-outer-secton .report, 
-  .ctc-report, .ctc-report .report {
+  .ctc-report, .ctc-report .report,
+  .receipts-outer-section .report {
     padding: 0 10px;
   }
 }
