--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -1,5 +1,5 @@
 <div class="page-start-point pt-4">
-  <div class="p-l-10 p-r-20 p-b-20 min-height p-t-20">
+  <div class="p-l-10 p-r-20 p-b-20 min-height p-t-20 adjust-right-padding">
     <ng-container *ngIf="materialDataLength == 0 && projectWiseData.length == 0">
       <div class="wrapper-btn-center">
         <div class="add-user-img global-store-image">
@@ -23,7 +23,7 @@
 
     <ng-container>
       <div class="row" *ngIf="materialDataLength > 0 || projectDataLength > 0">
-        <div class="col-xs-8 col-md-6">
+        <div class="col-md-6 col-sm-6 col-xs-6">
           <a href="javascript:void(0)" (click)="setButtonName('materialWise')">
             <button [class.active]="buttonName == 'materialWise'" class="color-black actv-btn" mat-button
               [ngClass]="isMobile ? 'pl-2 pr-2' : ''">
@@ -38,7 +38,7 @@
             </button>
           </a>
         </div>
-        <div class="col-xs-4 col-md-6 text-right">
+        <div class="col-md-6 col-sm-6 col-xs-6 text-right">
           <button mat-raised-button (click)="createRfq()" class="main-background-color main-button color-white m-r-10">
             Create RFP
           </button>
