--- a/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
+++ b/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
@@ -18,7 +18,8 @@
           </div>
           <div class="col-xs-1 p-r-0 p-l-0">
             <mat-form-field class="border-select label-font-size width-90 mat-form-field-flex-mm-padding">
-              <mat-select formControlName="materialUnit" placeholder="Unit*">
+              <mat-label>Unit*</mat-label>
+              <mat-select formControlName="materialUnit">
                 <div class="display-flex">
                   <input
                     class="p-l-10 p-b-5"
